welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: not found: value ||
    if(nums(k+1)==nums(k)+5 && nums(k+2)==nums(k)-1) || num(k-2)=num(k)-1{
                                                     ^has271:5: error: not found: value num
    if(nums(k+1)==nums(k)+5 && nums(k+2)==nums(k)-1) || num(k-2)=num(k)-1{
                                                                 ^has271:5: error: Int(1) does not take parameters
    if(nums(k+1)==nums(k)+5 && nums(k+2)==nums(k)-1) || num(k-2)=num(k)-1{
                                                                         ^